@@ -724,3 +724,4 @@
   EntityPanel.initializePanel() now returns the EntityPanel instance
   EntityTablePanel.propertySummaryPanels map field removed, unused
   common.ui.printing.* deleted
+  EntityTableModel.removeAll() removed, code moved to clear()
